# Agentic-Resolution-Desk

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-supervisor-worker.md  0002-postgres-checkpointer.md  0003-mcp-tool-sandbox.md  0004-pgvector-over-pinecone.md  0005-typed-tool-contracts-and-audit.md  0006-structured-output-routing.md  0007-worker-least-privilege-and-rag-abstraction.md  0008-human-in-the-loop-approval.md  0009-server-rendered-approval-dashboard.md  0010-expose-audit-trail.md  0011-llm-provider-gemini.md
scripts/: init_db.sql  seed_policies.py  smoke_durability.py
src/: __init__.py  config.py  graph.py  policy.py  state.py  workflow_service.py
src/agents/: __init__.py  auditor.py  billing.py  supervisor.py  support.py
src/api/: main.py  schemas.py
src/api/static/: app.js  audit.html  audit.js  index.html  styles.css
src/audit/: __init__.py  logger.py
src/llm/: client.py
src/mcp_server/: mock_crm.py  models.py  server.py  tools_impl.py
src/rag/: __init__.py  ingest.py  policies.py  retriever.py
tests/: _offline.py  conftest.py  test_api.py  test_audit.py  test_audit_api.py  test_auditor.py  test_billing.py  test_graph_topology.py  test_integration.py  test_policy.py  test_retriever.py  test_supervisor.py  test_support.py  test_tools.py  test_workflow_service.py
