[project]
name = "resolution-desk"
version = "1.0.0"
description = "Multi-Agent Enterprise Resolution Desk — supervisor/worker agents with sandboxed tools, durable state, and human-in-the-loop governance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langgraph==0.2.60",
    "langgraph-checkpoint-postgres==2.0.9",
    "langchain-core==0.3.28",
    "langchain-openai==0.2.14",
    "pydantic==2.10.4",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "fastmcp==0.4.1",
    "psycopg[binary,pool]==3.2.3",
    "pgvector==0.3.6",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"api" = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live Postgres database (skipped offline)",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["numpy.*", "langgraph.*", "langchain_core.*", "fastmcp.*", "psycopg_pool.*"]
ignore_errors = true
